# DictationMaster

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
plain/: infoChooseDict.txt  infoChooseMode.txt  infoUsage.txt  info_utf_8.yaml
